manifests/astro_docs/astro-docs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astro-docs
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astro-docs
  template:
    metadata:
      labels:
        app: astro-docs
    spec:
      containers:
        - name: astro-docs
          image: ghcr.io/zazanicholas01/astro-docs:run-1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: astro-docs
  namespace: default
spec:
  selector:
    app: astro-docs
  ports:
    - name: http
      port: 80
      targetPort: 80
