manifests/astro_docs/astro-docs-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: astro-docs-dev
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: astro-docs-dev
  template:
    metadata:
      labels:
        app: astro-docs-dev
    spec:
      containers:
        - name: astro-dev
          image: ghcr.io/zazanicholas01/astro-docs-dev:run-1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 4321
---
apiVersion: v1
kind: Service
metadata:
  name: astro-docs-dev
  namespace: default
spec:
  selector:
    app: astro-docs-dev
  ports:
    - name: http
      port: 4321
      targetPort: 4321
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: astro-docs-dev-route
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
      sectionName: https
  hostnames:
    - docs-dev.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: astro-docs-dev
          port: 4321
