manifests/astro_docs/astro-docs-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: astro-docs-route
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
      sectionName: https
  hostnames:
    - docs.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: astro-docs
          port: 80
